--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^11.0.3",
     "next": "latest",
     "react": "18.2.0",
+    "react-camera-pro": "^1.3.0",
     "react-dom": "18.2.0"
   },
   "engines": {
