--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-camera-pro": "^1.3.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1",
+    "styled-components": "^6.1.8"
   },
   "engines": {
     "node": ">=18"
